--- a/p27/index.html
+++ b/p27/index.html
@@ -9,7 +9,7 @@
     <script src="Roof.js"></script>
     <script src="Bob.js"></script>
     <script src="Chain.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
 <body>
