--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <meta charset="utf-8">
 </head>
 <body>
-  <script src="sketch.js"></script>
+  <script src="p27/sketch.js"></script>
 </body>
 </html>
